# release-please-python

./: CHANGELOG.md  README.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: release-please.yml
