[tool.poetry]
name = "test"
version = "0.1.1"
description = "Test"
authors = ["Test <aaron@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.17"
numpy = "^1.23.5"
scikit-image = "0.19.3"
Pillow = "10.3.0"
scipy = "^1.8.1"
pandas = "2.1.3"
seaborn = "0.11.1"
fastapi = "0.123.3"
pydantic = ">=1.8.0,<2.0.0"
uvicorn = ">=0.15.0,<0.16.0"
python-multipart = "0.0.19"
aiofiles = "0.8.0"
dash = "2.15.0"
dash-bootstrap-components = "1.1.0"
Jinja2 = "3.1.6"
MarkupSafe = "2.1.1"
Flask = "2.2.5"
black = "^24.3.0"
diskcache = "^5.4.0"
multiprocess = "^0.70.12"
psutil = "^5.9.1"
kaleido = "0.2.1"
dash-uploader = "^0.6.0"
requests = "^2.32.4"
pylint = "^2.15.0"
boto3 = "^1.29.0"
pytest = "^7.1.3"
werkzeug = "3.0.6"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
invoke = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
